--- a/web/sites/ptplus/config/sync/core.entity_view_display.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.default.yml
+++ b/web/sites/ptplus/config/sync/core.entity_view_display.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.default.yml
@@ -1,4 +1,4 @@
-uuid: 364b70a8-f049-4a6d-be76-c3a8e4dcadc8
+uuid: b7021706-18f8-4f4c-9aa7-1b3f85b4a64c
 langcode: en
 status: true
 dependencies:
@@ -18,7 +18,6 @@ dependencies:
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_post_banner_link_target
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_post_content_position
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_preview_display_only
-    - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_pt_tournament_page
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_publish_date
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_ribbon_background_color
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_ribbon_label_color
@@ -31,17 +30,101 @@ dependencies:
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_title
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_unpublish_date
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_user_availability
+    - image.style.thumbnail
   module:
     - color_field
+    - conditional_fields
     - datetime
+    - field_group
     - link
-    - options
     - svg_image
     - text
-    - user
     - webcomposer_slider_v2
+third_party_settings:
+  field_group:
+    group_scheduler_settings:
+      children:
+        - field_publish_date
+        - field_unpublish_date
+      parent_name: ''
+      weight: 5
+      format_type: tab
+      format_settings:
+        label: 'Scheduler Settings'
+        formatter: closed
+        description: ''
+        required_fields: true
+        id: scheduler-settings
+        classes: ''
+      label: 'Scheduler Settings'
+    group_pre_banner_fields:
+      children:
+        - field_banner_image
+        - field_banner_image_landscape
+        - field_banner_link
+        - field_banner_link_target
+        - field_banner_blurb
+        - field_content_position
+      parent_name: ''
+      weight: 3
+      format_type: fieldset
+      format_settings:
+        label: 'Pre Banner Fields'
+        description: ''
+        required_fields: true
+        id: pre-banner-fields
+        classes: ''
+      label: 'Pre Banner Fields'
+    group_post_banner_fields:
+      children:
+        - field_post_banner_image
+        - field_post_banner_image_landscap
+        - field_post_banner_link
+        - field_post_banner_link_target
+        - field_post_banner_blurb
+        - field_post_content_position
+        - field_user_availability
+      parent_name: ''
+      weight: 4
+      format_type: fieldset
+      format_settings:
+        label: 'Post Banner Fields'
+        description: ''
+        required_fields: true
+        id: post-banner-fields
+        classes: ''
+      label: 'Post Banner Fields'
+    group_additional_statuses:
+      children:
+        - field_status
+        - field_disable_in_tablet
+        - field_preview_display_only
+      parent_name: ''
+      weight: 6
+      format_type: fieldset
+      format_settings:
+        label: 'Additional Statuses'
+        description: 'Enable Preview, Tablet View, and the Slider entry statuses'
+        required_fields: true
+        id: additional-statuses
+        classes: ''
+      label: 'Additional Statuses'
+    group_product_ribbon:
+      children:
+        - field_ribbon_background_color
+        - field_ribbon_label_color
+        - field_ribbon_product_label
+      parent_name: ''
+      weight: 8
+      format_type: fieldset
+      format_settings:
+        id: product-ribbon
+        classes: ''
+        description: ''
+        required_fields: true
+      label: 'Product Ribbon'
 _core:
-  default_config_hash: lTOa1e37jE2gIy0Alk0YcBDwuKHa3-X2bDXwinqK7S4
+  default_config_hash: OZJ37uq9NXIxbipYTMrqYIn6yXsVaUWLRX1cLOk0Kl0
 id: webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.default
 targetEntityType: webcomposer_slider_v2_entity
 bundle: webcomposer_slider_v2_entity
@@ -49,281 +132,403 @@ mode: default
 content:
   field_banner_blurb:
     weight: 7
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: text_default
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings:
+      conditional_fields:
+        17ffb5f8-163e-4a00-87a2-d7937877cdb0:
+          dependee: field_log_in_state
+          settings:
+            state: visible
+            condition: value
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              -
+                value: '0'
+            effect: show
+            effect_options: {  }
+            selector: ''
+          entity_type: webcomposer_slider_v2_entity
+          bundle: webcomposer_slider_v2_entity
+    type: text_textarea
     region: content
   field_banner_image:
-    weight: 4
-    label: above
+    weight: 3
     settings:
-      image_style: ''
-      image_link: ''
-    third_party_settings: {  }
-    type: image
+      progress_indicator: throbber
+      preview_image_style: thumbnail
+    third_party_settings:
+      conditional_fields:
+        8387d396-da52-4cb1-811a-bff598a692f0:
+          dependee: field_log_in_state
+          settings:
+            state: visible
+            condition: value
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              -
+                value: '0'
+            effect: show
+            effect_options: {  }
+            selector: ''
+          entity_type: webcomposer_slider_v2_entity
+          bundle: webcomposer_slider_v2_entity
+    type: image_image
     region: content
   field_banner_image_landscape:
-    weight: 21
-    label: above
+    weight: 4
     settings:
-      image_style: ''
-      image_link: ''
+      progress_indicator: throbber
+      preview_image_style: thumbnail
     third_party_settings: {  }
-    type: image
+    type: image_image
     region: content
   field_banner_link:
     weight: 5
-    label: above
     settings:
-      trim_length: 80
-      url_only: false
-      url_plain: false
-      rel: ''
-      target: ''
-    third_party_settings: {  }
-    type: link
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings:
+      conditional_fields:
+        ad17fd21-97a8-46cd-95d7-44c2a7b88317:
+          dependee: field_log_in_state
+          settings:
+            state: visible
+            condition: value
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              -
+                value: '0'
+            effect: show
+            effect_options: {  }
+            selector: ''
+          entity_type: webcomposer_slider_v2_entity
+          bundle: webcomposer_slider_v2_entity
+    type: link_default
     region: content
   field_banner_link_target:
     weight: 6
-    label: above
     settings: {  }
-    third_party_settings: {  }
-    type: list_default
+    third_party_settings:
+      conditional_fields:
+        09501270-60e3-4bc1-b11c-e519a2f663f6:
+          dependee: field_log_in_state
+          settings:
+            state: visible
+            condition: value
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              -
+                value: '0'
+            effect: show
+            effect_options: {  }
+            selector: ''
+          entity_type: webcomposer_slider_v2_entity
+          bundle: webcomposer_slider_v2_entity
+    type: options_select
     region: content
   field_content_position:
     weight: 8
-    label: above
     settings: {  }
-    third_party_settings: {  }
-    type: list_default
+    third_party_settings:
+      conditional_fields:
+        5a9b5435-2202-44c0-9cb2-673b765d574f:
+          dependee: field_log_in_state
+          settings:
+            state: visible
+            condition: value
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              -
+                value: '0'
+            effect: show
+            effect_options: {  }
+            selector: ''
+          entity_type: webcomposer_slider_v2_entity
+          bundle: webcomposer_slider_v2_entity
+    type: options_select
     region: content
   field_disable_in_tablet:
-    weight: 17
-    label: above
+    weight: 21
     settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
+      display_label: true
     third_party_settings: {  }
-    type: boolean
+    type: boolean_checkbox
     region: content
   field_game_launching:
-    weight: 16
-    label: above
-    settings:
-      link: true
+    weight: 3
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_label
+    type: options_select
     region: content
   field_log_in_state:
-    weight: 3
-    label: above
+    weight: 1
     settings: {  }
-    third_party_settings: {  }
-    type: list_default
+    third_party_settings:
+      conditional_fields: {  }
+    type: options_buttons
     region: content
   field_post_banner_blurb:
-    weight: 15
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: text_default
+    weight: 16
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings:
+      conditional_fields:
+        80bb03ca-9b89-4cd5-8b21-99813a81a233:
+          dependee: field_log_in_state
+          settings:
+            state: visible
+            condition: value
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              -
+                value: '1'
+            effect: show
+            effect_options: {  }
+            selector: ''
+          entity_type: webcomposer_slider_v2_entity
+          bundle: webcomposer_slider_v2_entity
+    type: text_textarea
     region: content
   field_post_banner_image:
-    weight: 14
-    label: above
+    weight: 12
     settings:
-      image_style: ''
-      image_link: ''
-    third_party_settings: {  }
-    type: image
+      progress_indicator: throbber
+      preview_image_style: thumbnail
+    third_party_settings:
+      conditional_fields:
+        5ade20cf-cfa4-4f8b-ae2d-0c31c66b4fda:
+          dependee: field_log_in_state
+          settings:
+            state: visible
+            condition: value
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              -
+                value: '1'
+            effect: show
+            effect_options: {  }
+            selector: ''
+          entity_type: webcomposer_slider_v2_entity
+          bundle: webcomposer_slider_v2_entity
+    type: image_image
     region: content
   field_post_banner_image_landscap:
-    weight: 22
-    label: above
+    weight: 13
     settings:
-      image_style: ''
-      image_link: ''
+      progress_indicator: throbber
+      preview_image_style: thumbnail
     third_party_settings: {  }
-    type: image
+    type: image_image
     region: content
   field_post_banner_link:
-    weight: 11
-    label: above
+    weight: 14
     settings:
-      trim_length: 80
-      url_only: false
-      url_plain: false
-      rel: ''
-      target: ''
-    third_party_settings: {  }
-    type: link
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings:
+      conditional_fields:
+        e6e2ffa7-2b85-4d65-bcd8-4f201bac2280:
+          dependee: field_log_in_state
+          settings:
+            state: visible
+            condition: value
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              -
+                value: '1'
+            effect: show
+            effect_options: {  }
+            selector: ''
+          entity_type: webcomposer_slider_v2_entity
+          bundle: webcomposer_slider_v2_entity
+    type: link_default
     region: content
   field_post_banner_link_target:
-    weight: 12
-    label: above
+    weight: 15
     settings: {  }
-    third_party_settings: {  }
-    type: list_default
+    third_party_settings:
+      conditional_fields:
+        7c6ed5f0-867e-4c89-b1f0-333dd1ed9f0d:
+          dependee: field_log_in_state
+          settings:
+            state: visible
+            condition: value
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              -
+                value: '1'
+            effect: show
+            effect_options: {  }
+            selector: ''
+          entity_type: webcomposer_slider_v2_entity
+          bundle: webcomposer_slider_v2_entity
+    type: options_select
     region: content
   field_post_content_position:
-    weight: 13
-    label: above
+    weight: 17
     settings: {  }
-    third_party_settings: {  }
-    type: list_default
+    third_party_settings:
+      conditional_fields:
+        11942b8b-0297-4366-a7a1-f23ccd7cd1ea:
+          dependee: field_log_in_state
+          settings:
+            state: visible
+            condition: value
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              -
+                value: '1'
+            effect: show
+            effect_options: {  }
+            selector: ''
+          entity_type: webcomposer_slider_v2_entity
+          bundle: webcomposer_slider_v2_entity
+    type: options_select
     region: content
   field_postlogin_slider_ribbon:
     weight: 17
-    label: above
-    settings:
-      link: true
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_label
+    type: options_select
     region: content
   field_prelogin_slider_ribbon:
-    weight: 18
-    label: above
-    settings:
-      link: true
+    weight: 8
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_label
+    type: options_select
     region: content
   field_preview_display_only:
-    weight: 16
-    label: above
+    weight: 22
     settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
+      display_label: true
     third_party_settings: {  }
-    type: boolean
-    region: content
-  field_pt_tournament_page:
-    weight: 31
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    type: boolean
+    type: boolean_checkbox
     region: content
   field_publish_date:
-    weight: 9
-    label: above
-    settings:
-      format_type: medium
-      timezone_override: ''
+    weight: 8
+    settings: {  }
     third_party_settings: {  }
     type: datetime_default
     region: content
   field_ribbon_background_color:
-    weight: 18
-    label: above
-    settings:
-      format: hex
-      opacity: '1'
+    weight: 13
+    settings: {  }
     third_party_settings: {  }
-    type: color_field_formatter_text
+    type: color_field_widget_html5
     region: content
   field_ribbon_label_color:
-    weight: 20
-    label: above
-    settings:
-      format: hex
-      opacity: '1'
+    weight: 14
+    settings: {  }
     third_party_settings: {  }
-    type: color_field_formatter_text
+    type: color_field_widget_html5
     region: content
   field_ribbon_product_label:
-    weight: 23
-    label: above
-    settings: {  }
+    weight: 15
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
-    type: text_default
+    type: text_textfield
     region: content
   field_slider_enable_game_launch:
-    weight: 27
-    label: above
+    weight: 9
     settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
+      display_label: true
     third_party_settings: {  }
-    type: boolean
+    type: boolean_checkbox
     region: content
   field_slider_game_code:
-    weight: 28
-    label: above
+    weight: 11
     settings:
-      link_to_entity: false
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
-    type: string
+    type: string_textfield
     region: content
   field_slider_game_provider:
-    weight: 29
-    label: above
+    weight: 12
     settings: {  }
     third_party_settings: {  }
-    type: list_default
+    type: options_select
     region: content
   field_slider_use_game_loader:
-    weight: 30
-    label: above
+    weight: 10
     settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
+      display_label: true
     third_party_settings: {  }
-    type: boolean
+    type: boolean_checkbox
     region: content
   field_status:
-    weight: 19
-    label: above
+    weight: 20
     settings: {  }
     third_party_settings: {  }
-    type: list_default
+    type: options_select
     region: content
   field_title:
-    weight: 2
-    label: above
+    weight: 0
     settings:
-      link_to_entity: false
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
-    type: string
+    type: string_textfield
     region: content
   field_unpublish_date:
-    weight: 10
-    label: above
-    settings:
-      format_type: medium
-      timezone_override: ''
+    weight: 9
+    settings: {  }
     third_party_settings: {  }
     type: datetime_default
     region: content
   field_user_availability:
-    weight: 26
-    label: above
+    weight: 18
     settings: {  }
     third_party_settings: {  }
-    type: list_default
+    type: options_buttons
     region: content
-  name:
-    label: above
-    type: string
-    weight: 0
+  langcode:
+    type: language_select
+    weight: 2
     region: content
     settings:
-      link_to_entity: false
+      include_locked: true
     third_party_settings: {  }
-  user_id:
-    label: hidden
-    type: author
-    weight: 1
+  translation:
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
-  langcode: true
+  name: true
+  user_id: true
