--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ web/core
 !/logs/.gitkeep
 
 # Ignore Drupal's file directory
+web/sites/*/files
 web/sites/*/files/*
 !web/sites/*/files/.htaccess
 
