--- a/web/sites/mobile-nextbet/config/sync/core.extension.yml
+++ b/web/sites/mobile-nextbet/config/sync/core.extension.yml
@@ -55,6 +55,7 @@ module:
   mobile_config: 0
   mobile_infobar: 0
   mobile_live_dealer: 0
+  mobile_virtuals: 0
   mobile_nextbet: 0
   mobile_nextbet_logo_upload: 0
   mobile_product_menu: 0
